Fixed footer z-index

--- a/front-end/src/components/footer.css
+++ b/front-end/src/components/footer.css
@@ -44,5 +44,5 @@
 }
 
 .footer{
-    z-index: 3 !important;
+    z-index: -1 !important;
 }
